<resources>
    <string name="app_name">App_RadioButton</string>
    <string name="txt_PrimerValor">Ingresa el primer valor</string>
    <string name="txt_SegundoValor">Ingresa el segundo valor</string>
    <string name="rb_sumar">Sumar</string>
    <string name="rb_restar">Restar</string>
    <string name="rb_producto">Multiplicar</string>
    <string name="rb_dividir">Dividir</string>
    <string name="Button">Calcular</string>
    <string name="tv_resultado">Resultado</string>
</resources>
